fix glass-fill text overlap

--- a/src/components/statistics/glass-fill/glass-fill.module.scss
+++ b/src/components/statistics/glass-fill/glass-fill.module.scss
@@ -23,6 +23,6 @@
 
 .glass_svg {
   @include mixins.breakpoint-mobile-down {
-    max-width: 130px;
+    max-width: 115px;
   }
 }
